# tpmp-gr10b-lab4-top1sigmateam

./: CMakeLists.txt  db.md  diag.md  setup.sql
.github/workflows/: ci.yaml
includes/: auth.h  database.h
src/: auth.cpp  database.cpp  main.cpp
tests/: test_auth.c  test_auth.cpp  test_database.cpp  test_main.cpp
